# jarvis

./: .gitignore  .vercelignore  BROKEN_PIPE_FIX.md  CLEANING_COMPLETE.md  COMMANDS.md  CONTENT_GENERATOR_COMPLETE.md  CONTENT_GENERATOR_GUIDE.md  CONTENT_GENERATOR_README.md  CURRENT_FLOW.md  EXTRACTION_STRATEGY.md  PHASE2_COMPLETE.md  PHASE2_README.md  PHASE_15_COMPLETE.md  PHASE_3_COMPLETE.md  PM_REDESIGN.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SAVE_FEATURE_GUIDE.md  SAVE_FEATURE_READY.md  SMART_EXTRACTION_GUIDE.md  START_HERE.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS.md  VERCEL_DEPLOY.md  WEB_APP_GUIDE.md  YOUR_RESULTS.md  app.py  backup.sh  classifier.py  classifier_clean.py  clean_database.py  content_app.py  content_generator.py  database.py  database_cleaned.py  database_v2.py  deduplicator.py  embeddings.py  explore.py  (+18 more)
templates/: add.html  base.html  home_old.html  home_v2.html  library.html  search.html  stats.html
templates_content/: content_base.html  content_draft_edit.html  content_drafts.html  content_history.html  content_home.html  content_results.html  content_save.html  content_voice.html  impact_dashboard.html  import_bookmarks.html  import_twitter.html  library.html  login.html  my_voice.html  onboarding.html  public_voice.html  query_interface.html  query_result.html  referral.html  shared_generation.html  signup.html  syntheses_list.html  synthesis_view.html  testimonial.html  upgrade.html  waste_analysis.html
